# vulcan3d_vibecoded

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  autodemo_baseline20.out  autodemo_p2.out  autodemo_p2b.out  autodemo_p3.out  autodemo_p3b.out  autodemo_p4.out  autodemo_p5.out  autodemo_p6.out  autodemo_smretry.err  autodemo_smretry.out  autodemo_spom.out  autodemo_spomS.err  autodemo_spomS.out  autodemo_spomS2.err  autodemo_spomS2.out  autodemo_spomS3.out  autodemo_sun.err  autodemo_sun.out  autodemo_sun2.out  autodemo_taa.out  autodemo_taatrim.out  build.cmd  build.ps1  d2.err  d2.out  d3.out  d4.out  qlike_imgui.ini  qlike_settings.cfg.default
assets/gun/: license.txt  scene.gltf
assets/sounds/: LICENSE.md  README.md
assets/spacejet/: license.txt  scene.gltf
docs/: fsr3_plan.md  restir_plan.md  roadmap.md  svgf_plan.md  terrain_migration_plan.md  terrain_plan.md  vulkan_best_practices.md
shaders/: bloom_down.frag  bloom_up.frag  compose.frag  cube.frag  cube.vert  cube_depth.frag  cube_depth.vert  grass.frag  grass.vert  grass_raymarch.frag  shadow.vert  shadow_lr.frag  shell.frag  shell.vert  ssdm_compose.frag  ssdm_disp.frag  ssdm_refine.frag  svgf_atrous.frag  svgf_moments.frag  taa.frag  taa.vert  taau.frag  terrain.vert  terrain_raymarch.frag  terrain_raymarch.vert  terrain_raymarch_compose.frag  terrain_tess.tesc  terrain_tess.tese  terrain_tess.vert  voxel.frag  voxel.vert  water.frag  water.vert
src/: main.cpp
src/engine/: audio.cpp  audio.h  crash_handler.cpp  crash_handler.h  frustum.cpp  frustum.h  gltf_loader.cpp  gltf_loader.h  grass.cpp  grass.h  log.cpp  log.h  mesh.cpp  mesh.h  physics_world.cpp  physics_world.h  skybox.cpp  skybox.h  terrain.cpp  terrain.h  texture.cpp  texture.h  vk_engine.cpp  vk_engine.h  vk_initializers.cpp  vk_initializers.h  vk_pipelines.cpp  vk_pipelines.h  vk_ui.cpp  window.cpp  window.h
src/engine/vk_engine/: bloom.cpp  combat.cpp  descriptors.cpp  fsr2.cpp  fsr3.cpp  helpers.cpp  internal.h  post.cpp  restir.cpp  rt.cpp  screenshot.cpp  settings.cpp  setup.cpp  ssdm.cpp  sun_shadow.cpp  svgf.cpp  taa.cpp  voxel.cpp  world.cpp
src/engine/voxel/: voxel_world.cpp  voxel_world.h
src/game/: collision.cpp  collision.h  level.cpp  level.h  physics.cpp  physics.h  player.cpp  player.h
tests/: CMakeLists.txt  test_collision.cpp  test_frustum.cpp  test_physics.cpp
tools/: ppm2png.cpp
